--- a/ignite-rocketsear-ts/package.json
+++ b/ignite-rocketsear-ts/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "date-fns": "^2.28.0",
+    "phosphor-react":"^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
