--- a/ignews/package.json
+++ b/ignews/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/react-icons": "^3.0.0",
     "next": "12.1.6",
+    "next-auth": "^4.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
