--- a/ignews/package.json
+++ b/ignews/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/next-auth": "^3.15.0",
     "@types/react-icons": "^3.0.0",
+    "faunadb": "^4.6.0",
     "next": "12.1.6",
     "next-auth": "^4.6.1",
     "react": "18.2.0",
