--- a/ignews/package.json
+++ b/ignews/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.32.0",
     "@types/next-auth": "^3.15.0",
     "@types/react-icons": "^3.0.0",
+    "axios": "^0.27.2",
     "faunadb": "^4.6.0",
     "next": "12.1.6",
     "next-auth": "^4.6.1",
