--- a/ignews/package.json
+++ b/ignews/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ignews",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,15 +12,18 @@
   "dependencies": {
     "@prismicio/client": "^6.6.1",
     "@prismicio/helpers": "^2.3.1",
+    "@prismicio/next": "^0.1.3",
     "@prismicio/react": "^2.4.2",
     "@prismicio/slice-simulator-react": "^0.2.2",
     "@stripe/stripe-js": "^1.32.0",
+    "@types/next": "^9.0.0",
     "@types/next-auth": "^3.15.0",
     "@types/react-icons": "^3.0.0",
     "axios": "^0.27.2",
     "faunadb": "^4.6.0",
     "next": "12.1.6",
     "next-auth": "^4.6.1",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -30,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.14",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
