--- a/ignews/package.json
+++ b/ignews/package.json
@@ -19,6 +19,7 @@
     "@types/next": "^9.0.0",
     "@types/next-auth": "^3.15.0",
     "@types/react-icons": "^3.0.0",
+    "@types/stripe": "^8.0.417",
     "axios": "^0.27.2",
     "faunadb": "^4.6.0",
     "next": "12.1.6",
