--- a/dashgo/package.json
+++ b/dashgo/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@hookform/resolvers": "^2.9.3",
+    "@types/faker": "^6.6.9",
     "apexcharts": "^3.35.3",
     "framer-motion": "^6.3.16",
     "next": "12.2.0",
@@ -22,13 +23,17 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@types/node": "^18.0.1",
     "@types/react": "^18.0.14",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "faker": "^6.6.6",
+    "miragejs": "^0.1.45",
     "typescript": "^4.7.4"
   }
 }
