--- a/perfreact/package.json
+++ b/perfreact/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server -d 750 -w -p 3333 ./server.js"
   },
   "dependencies": {
     "next": "12.2.0",
@@ -18,6 +19,7 @@
     "@types/react": "^18.0.15",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "json-server": "^0.17.0",
     "typescript": "^4.7.4"
   }
 }
