--- a/ignews/package.json
+++ b/ignews/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "slicemachine": "start-slicemachine"
+    "slicemachine": "start-slicemachine",
+    "test": "jest"
   },
   "dependencies": {
     "@prismicio/client": "^6.6.1",
@@ -22,6 +23,7 @@
     "@types/stripe": "^8.0.417",
     "axios": "^0.27.2",
     "faunadb": "^4.6.0",
+    "jest-environment-jsdom": "^28.1.2",
     "next": "12.1.6",
     "next-auth": "^4.6.1",
     "prismic-dom": "^2.2.7",
@@ -33,11 +35,18 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.14.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/node": "^18.0.0",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.14",
+    "babel-jest": "^28.1.2",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.2",
+    "jest-dom": "^4.0.0",
     "slice-machine-ui": "^0.4.0",
     "typescript": "^4.7.4"
   }
