--- a/ignews/package.json
+++ b/ignews/package.json
@@ -47,6 +47,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.2",
     "jest-dom": "^4.0.0",
+    "jest-mock": "^28.1.1",
     "slice-machine-ui": "^0.4.0",
     "typescript": "^4.7.4"
   }
